--- a/auspicious/templates/page/about.html
+++ b/auspicious/templates/page/about.html
@@ -19,7 +19,7 @@
                 <div class="col-lg-7 col-md-7 col-12">
                     <div class="breadcrumbs-content">
                         <h2>About Us</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<!--                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>-->
                     </div>
                 </div>
                 <!-- Breadcrumbs-Menu -->
