--- a/dashboard/templates/dashboard/components/styles.html
+++ b/dashboard/templates/dashboard/components/styles.html
@@ -1,5 +1,9 @@
 {% load static %}
 
+<!-- favicon -->
+<link rel="apple-touch-icon" href="{% static 'assets/landing/assets/img/favicons/favicon.png' %}">
+<link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/landing/assets/img/favicons/favicon.png' %}">
+
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 <!-- Bootstrap CSS -->
@@ -11,7 +15,6 @@
 <link rel="stylesheet" href="{% static 'assets/vendors/bootstrap-icons/bootstrap-icons.css' %}">
 <link rel="stylesheet" href="{% static 'assets/css/custom.css' %}">
 <link rel="stylesheet" href="{% static 'assets/css/app.css' %}">
-<link rel="shortcut icon" href="{% static 'assets/images/logo/auspicious-logo.png' %}" type="image/x-icon">
 
 <!-- Load JQuery -->
 <script src="{% static 'assets/vendors/jquery/jquery.min.js' %}"></script>
