--- a/accounts/templates/accounts/user-list.html
+++ b/accounts/templates/accounts/user-list.html
@@ -49,14 +49,14 @@
                                     <a href="{% url update_url slug=object.user_profile.slug %}"
                                         class="btn btn-primary btn-sm text-deco-none">
                                         <span class="">
-                                            Edit
+                                            <i class="fas fa-edit" aria-hidden="true"></i>
                                         </span>
                                     </a>
                                     {% else %}
                                     <a href="{% url update_url id=object.user_profile.id %}"
                                         class="btn btn-primary btn-sm text-deco-none">
                                         <span class="">
-                                            Edit
+                                            <i class="fas fa-edit" aria-hidden="true"></i>
                                         </span>
                                     </a>
                                     {% endif %}
@@ -70,14 +70,14 @@
                                     <a href="{% url detail_url slug=object.user_profile.slug %}"
                                         class="btn btn-info btn-sm text-deco-none">
                                         <span class="">
-                                            Detail
+                                            <i class="fas fa-eye" aria-hidden="true"></i>
                                         </span>
                                     </a>
                                     {% else %}
                                     <a href="{% url detail_url id=object.user_profile.id %}"
                                         class="btn btn-info btn-sm text-deco-none">
                                         <span class="">
-                                            Detail
+                                            <i class="fas fa-eye" aria-hidden="true"></i>
                                         </span>
                                     </a>
                                     {% endif %}
@@ -93,14 +93,14 @@
                                         class="btn btn-danger btn-sm text-deco-none bg-c-danger m-1 js_delete_{{namespace}}"
                                         value="{{object.user_profile.slug}}" data-toggle="modal"
                                         data-target="#modal-delete-{{namespace}}">
-                                        Delete
+                                        <i class="fas fa-trash-alt"></i>
                                     </button>
                                     {% else %}
                                     <button type="button"
                                         class="btn btn-danger btn-sm text-deco-none bg-c-danger m-1 js_delete_{{namespace}}"
                                         value="{{object.user_profile.id}}" data-toggle="modal"
                                         data-target="#modal-delete-{{namespace}}">
-                                        Delete
+                                        <i class="fas fa-trash-alt"></i>
                                     </button>
                                     {% endif %}
                                     {% endif %}
