--- a/dashboard/templates/dashboard/components/styles.html
+++ b/dashboard/templates/dashboard/components/styles.html
@@ -13,6 +13,7 @@
 <link rel="stylesheet" href="{% static 'assets/vendors/fontawesome/all.min.css' %}">
 <link rel="stylesheet" href="{% static 'assets/vendors/perfect-scrollbar/perfect-scrollbar.css' %}">
 <link rel="stylesheet" href="{% static 'assets/vendors/bootstrap-icons/bootstrap-icons.css' %}">
+<link rel="stylesheet" href="{% static 'assets/vendors/iconly/bold.css' %}">
 <link rel="stylesheet" href="{% static 'assets/css/custom.css' %}">
 <link rel="stylesheet" href="{% static 'assets/css/app.css' %}">
 
