--- a/auspicious/templates/components/footer.html
+++ b/auspicious/templates/components/footer.html
@@ -43,7 +43,7 @@
     <!-- Footer Start -->
     <footer class="footer-area">
         <div class="container">
-            <p>© Copyright 2021 I All Rights Reserved by <a href="">AUSPICIOUSBD</a></p>
+            <p>© Copyright {% now "Y" %} | All Rights Reserved by <a href="{% url 'home' %}">AUSPICIOUSBD</a></p>
         </div>
     </footer>
     <!-- Footer End -->
