--- a/dashboard/templates/dashboard/components/footer.html
+++ b/dashboard/templates/dashboard/components/footer.html
@@ -1,12 +1,12 @@
 <footer>
     <div class="footer clearfix mb-0 text-muted">
         <div class="float-start">
-            <p>2021 &copy; Auspicious</p>
+            <p>© Copyright {% now "Y" %} | All Rights Reserved by <a href="{% url 'home' %}">AUSPICIOUSBD</a></p>
         </div>
         <div class="float-end">
             <p>
                 Created by
-                <a href="#">Rapples Limited</a>
+                <a href="http://rappleslimited.com/" target='_blank'>Rapples Limited</a>
             </p>
         </div>
     </div>
