--- a/dashboard/templates/dashboard/snippets/delete-modal.html
+++ b/dashboard/templates/dashboard/snippets/delete-modal.html
@@ -18,7 +18,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
                         <button type="submit" class="btn btn-danger">Yes, Delete</button>
                     </div>
                 </form>
