--- a/accounts/templates/accounts/user-list.html
+++ b/accounts/templates/accounts/user-list.html
@@ -16,7 +16,7 @@
                     <table id="list-datatable" class="display table table-striped table-bordered align-items-center table-flush
                         table-hover cell-border" style="width:100%">
                         <thead class="thead-dark">
-                            <tr>
+                            <tr class="text-center">
                                 <th>Action</th>
                                 <th>#</th>
                                 <th>Username</th>
@@ -38,7 +38,7 @@
 
                             <!-- table body -->
                             {% for object in list_objects %}
-                            <tr>
+                            <tr class="text-center">
 
                                 <!-- action -->
                                 <td style="width:14%">
@@ -140,7 +140,7 @@
                         </tbody>
 
                         <tfoot class="thead-dark">
-                            <tr>
+                            <tr class="text-center">
                                 <th>Action</th>
                                 <th>#</th>
                                 <th>Username</th>
