--- a/accounts/templates/accounts/user-detail.html
+++ b/accounts/templates/accounts/user-detail.html
@@ -84,7 +84,7 @@
                         table-hover cell-border" style="width:100%">
                         <tr>
                             <th>
-                                <div class="row">
+                                <div class="row text-center">
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
                                         <span class="text-dark font-bold">
                                             Title
@@ -101,7 +101,7 @@
                         <tr>
                             <th>
                                 <div class="row">
-                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-center">
                                         Username
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
@@ -119,7 +119,7 @@
                         <tr>
                             <th>
                                 <div class="row">
-                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-center">
                                         Email
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
@@ -137,7 +137,7 @@
                         <tr>
                             <th>
                                 <div class="row">
-                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-center">
                                         First Name
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
@@ -155,7 +155,7 @@
                         <tr>
                             <th>
                                 <div class="row">
-                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-center">
                                         Last Name
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
@@ -173,7 +173,7 @@
                         <tr>
                             <th>
                                 <div class="row">
-                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-center">
                                         Gender
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
@@ -191,7 +191,7 @@
                         <tr>
                             <th>
                                 <div class="row">
-                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-center">
                                         User Level
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
@@ -205,7 +205,7 @@
                         <tr>
                             <th>
                                 <div class="row">
-                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-center">
                                         Is Stuff
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
@@ -223,7 +223,7 @@
                         <tr>
                             <th>
                                 <div class="row">
-                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-center">
                                         Is Active
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
@@ -241,7 +241,7 @@
                         <tr>
                             <th>
                                 <div class="row">
-                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-center">
                                         Is Superuser
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
@@ -259,7 +259,7 @@
                         <tr>
                             <th>
                                 <div class="row">
-                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-center">
                                         Last Login
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
@@ -277,7 +277,7 @@
                         <tr>
                             <th>
                                 <div class="row">
-                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-center">
                                         Date Joined
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
@@ -295,7 +295,7 @@
                         <tr>
                             <th>
                                 <div class="row">
-                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-center">
                                         Groups
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
@@ -313,7 +313,7 @@
                         <tr>
                             <th>
                                 <div class="row">
-                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-center">
                                         Created By
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
