--- a/dashboard/templates/dashboard/pages/index.html
+++ b/dashboard/templates/dashboard/pages/index.html
@@ -27,25 +27,8 @@
                         </div>
                     </div>
                     <div class="col-md-8">
-                        <h6 class="text-muted font-semibold">Profile Views</h6>
-                        <h6 class="font-extrabold mb-0">112.000</h6>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-6 col-lg-3 col-md-6">
-        <div class="card">
-            <div class="card-body px-3 py-4-5">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="stats-icon blue">
-                            <i class="iconly-boldProfile"></i>
-                        </div>
-                    </div>
-                    <div class="col-md-8">
-                        <h6 class="text-muted font-semibold">Followers</h6>
-                        <h6 class="font-extrabold mb-0">183.000</h6>
+                        <h6 class="text-muted font-semibold">Active Jobs</h6>
+                        <h6 class="font-extrabold mb-0">{{ total_active_job }}</h6>
                     </div>
                 </div>
             </div>
@@ -61,8 +44,25 @@
                         </div>
                     </div>
                     <div class="col-md-8">
-                        <h6 class="text-muted font-semibold">Following</h6>
-                        <h6 class="font-extrabold mb-0">80.000</h6>
+                        <h6 class="text-muted font-semibold">Total Applicants</h6>
+                        <h6 class="font-extrabold mb-0">{{ total_job_applicant }}</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+        <div class="col-6 col-lg-3 col-md-6">
+        <div class="card">
+            <div class="card-body px-3 py-4-5">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="stats-icon blue">
+                            <i class="iconly-boldProfile"></i>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <h6 class="text-muted font-semibold">Total Client</h6>
+                        <h6 class="font-extrabold mb-0">{{ total_client }}</h6>
                     </div>
                 </div>
             </div>
@@ -78,8 +78,78 @@
                         </div>
                     </div>
                     <div class="col-md-8">
-                        <h6 class="text-muted font-semibold">Saved Post</h6>
-                        <h6 class="font-extrabold mb-0">112</h6>
+                        <h6 class="text-muted font-semibold">Total Project</h6>
+                        <h6 class="font-extrabold mb-0">{{ total_project }}</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-6 col-lg-3 col-md-6">
+        <div class="card">
+            <div class="card-body px-3 py-4-5">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="stats-icon purple">
+                            <i class="iconly-boldShow"></i>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <h6 class="text-muted font-semibold">Running Projects</h6>
+                        <h6 class="font-extrabold mb-0">{{ total_running_project }}</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-6 col-lg-3 col-md-6">
+        <div class="card">
+            <div class="card-body px-3 py-4-5">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="stats-icon green">
+                            <i class="iconly-boldAdd-User"></i>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <h6 class="text-muted font-semibold">Completed Projects</h6>
+                        <h6 class="font-extrabold mb-0">{{ total_completed_project }}</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+        <div class="col-6 col-lg-3 col-md-6">
+        <div class="card">
+            <div class="card-body px-3 py-4-5">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="stats-icon blue">
+                            <i class="iconly-boldProfile"></i>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <h6 class="text-muted font-semibold">Total Jobs</h6>
+                        <h6 class="font-extrabold mb-0">{{ total_job }}</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-6 col-lg-3 col-md-6">
+        <div class="card">
+            <div class="card-body px-3 py-4-5">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="stats-icon red">
+                            <i class="fas fa-user" style="color:#fff"></i>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <h6 class="text-muted font-semibold">Total Users</h6>
+                        <h6 class="font-extrabold mb-0">{{ total_user }}</h6>
                     </div>
                 </div>
             </div>
