--- a/dashboard/templates/dashboard/pages/index.html
+++ b/dashboard/templates/dashboard/pages/index.html
@@ -15,15 +15,6 @@
 
 
 {% block content %}
-<style>
-.box{
-    background-image: linear-gradient(to top,#3492d0, #63bcf7);
-    color:#fff;
-    }
-.box:hover{
-    background:#3492d0;
-}
-</style>
 
 <div class="row">
     <div class="col-6 col-lg-3 col-md-6">
@@ -37,7 +28,7 @@
                     </div>
                     <div class="col-md-8">
                         <h6 class="font-semibold" style="color:#fff;">Active Jobs</h6>
-                        <h6 class="font-extrabold mb-0">{{ total_active_job }}</h6>
+                        <h4 class="font-extrabold mb-0">{{ total_active_job }}</h4>
                     </div>
                 </div>
             </div>
@@ -54,7 +45,7 @@
                     </div>
                     <div class="col-md-8">
                         <h6 class="font-semibold" style="color:#fff;">Total Applicants</h6>
-                        <h6 class="font-extrabold mb-0">{{ total_job_applicant }}</h6>
+                        <h4 class="font-extrabold mb-0">{{ total_job_applicant }}</h4>
                     </div>
                 </div>
             </div>
@@ -71,7 +62,7 @@
                     </div>
                     <div class="col-md-8">
                         <h6 class="font-semibold">Total Client</h6>
-                        <h6 class="font-extrabold mb-0">{{ total_client }}</h6>
+                        <h4 class="font-extrabold mb-0">{{ total_client }}</h4>
                     </div>
                 </div>
             </div>
@@ -88,7 +79,7 @@
                     </div>
                     <div class="col-md-8">
                         <h6 class="font-semibold">Total Project</h6>
-                        <h6 class="font-extrabold mb-0">{{ total_project }}</h6>
+                        <h4 class="font-extrabold mb-0">{{ total_project }}</h4>
                     </div>
                 </div>
             </div>
@@ -106,8 +97,8 @@
                         </div>
                     </div>
                     <div class="col-md-8">
-                        <h6 class="font-semibold">Running Projects</h6>
-                        <h6 class="font-extrabold mb-0">{{ total_running_project }}</h6>
+                        <h6 class="font-semibold">Total Project</h6>
+                        <h4 class="font-extrabold mb-0">{{ total_project }}</h4>
                     </div>
                 </div>
             </div>
@@ -124,7 +115,7 @@
                     </div>
                     <div class="col-md-8">
                         <h6 class="font-semibold">Completed Projects</h6>
-                        <h6 class="font-extrabold mb-0">{{ total_completed_project }}</h6>
+                        <h4 class="font-extrabold mb-0">{{ total_completed_project }}</h4>
                     </div>
                 </div>
             </div>
@@ -140,8 +131,8 @@
                         </div>
                     </div>
                     <div class="col-md-8">
-                        <h6 class="font-semibold">Total Jobs</h6>
-                        <h6 class="font-extrabold mb-0">{{ total_job }}</h6>
+                        <h6 class="font-semibold">Running Projects</h6>
+                        <h4 class="font-extrabold mb-0">{{ total_running_project }}</h4>
                     </div>
                 </div>
             </div>
@@ -158,7 +149,7 @@
                     </div>
                     <div class="col-md-8">
                         <h6 class="font-semibold">Total Users</h6>
-                        <h6 class="font-extrabold mb-0">{{ total_user }}</h6>
+                        <h4 class="font-extrabold mb-0">{{ total_user }}</h4>
                     </div>
                 </div>
             </div>
