--- a/dashboard/templates/dashboard/pages/index.html
+++ b/dashboard/templates/dashboard/pages/index.html
@@ -18,6 +18,7 @@
 
 <div class="row">
     <div class="col-6 col-lg-3 col-md-6">
+    <a href="{% url 'dashboard:create_job' %}">
         <div class="card box">
             <div class="card-body px-3 py-4-5">
                 <div class="row">
@@ -33,8 +34,10 @@
                 </div>
             </div>
         </div>
+        </a>
     </div>
     <div class="col-6 col-lg-3 col-md-6">
+        <a href="{% url 'dashboard:create_job' %}">
         <div class="card box">
             <div class="card-body px-3 py-4-5">
                 <div class="row">
@@ -50,8 +53,10 @@
                 </div>
             </div>
         </div>
+        </a>
     </div>
     <div class="col-6 col-lg-3 col-md-6">
+        <a href="{% url 'dashboard:job_application_list' %}">
         <div class="card box">
             <div class="card-body px-3 py-4-5">
                 <div class="row">
@@ -67,8 +72,10 @@
                 </div>
             </div>
         </div>
+        </a>
     </div>
         <div class="col-6 col-lg-3 col-md-6">
+            <a href="{% url 'dashboard:create_client' %}">
         <div class="card box">
             <div class="card-body px-3 py-4-5">
                 <div class="row">
@@ -84,11 +91,13 @@
                 </div>
             </div>
         </div>
+        </a>
     </div>
 
 </div>
 <div class="row">
     <div class="col-6 col-lg-3 col-md-6">
+        <a href="{% url 'dashboard:create_project' %}">
         <div class="card box">
             <div class="card-body px-3 py-4-5">
                 <div class="row">
@@ -104,8 +113,10 @@
                 </div>
             </div>
         </div>
+        </a>
     </div>
     <div class="col-6 col-lg-3 col-md-6">
+        <a href="{% url 'dashboard:create_project' %}">
         <div class="card box">
             <div class="card-body px-3 py-4-5">
                 <div class="row">
@@ -121,8 +132,10 @@
                 </div>
             </div>
         </div>
+        </a>
     </div>
         <div class="col-6 col-lg-3 col-md-6">
+        <a href="{% url 'dashboard:create_project' %}">
         <div class="card box">
             <div class="card-body px-3 py-4-5">
                 <div class="row">
@@ -138,8 +151,10 @@
                 </div>
             </div>
         </div>
+        </a>
     </div>
     <div class="col-6 col-lg-3 col-md-6">
+        <a href="{% url 'create_user' %}">
         <div class="card box">
             <div class="card-body px-3 py-4-5">
                 <div class="row">
@@ -155,7 +170,9 @@
                 </div>
             </div>
         </div>
+        </a>
     </div>
+
 </div>
 
 <div class="row">
