--- a/dashboard/templates/dashboard/pages/index.html
+++ b/dashboard/templates/dashboard/pages/index.html
@@ -180,7 +180,7 @@
         <div class="headline">
             <h5>Latest Job Applications</h5>
         </div>
-        <hr>
+
         <div class="table-responsive">
             <table class="display table align-items-center table-flush table-hover"
                 style="width:100%">
@@ -216,14 +216,14 @@
         <div class="headline">
             <h5>Latest Ongoing Projects</h5>
         </div>
-        <hr>
+
         <div class="table-responsive">
             <table id="list-datatable" class="display table align-items-center table-flush table-hover"
                 style="width:100%">
                 <thead class="thead-dark">
                     <tr class="text-center">
                         <th>Name</th>
-                        <th>category</th>
+                        <th>Category</th>
                         <th>Client Name</th>
                         <th>Year</th>
                     </tr>
